--- a/Style.css
+++ b/Style.css
@@ -31,12 +31,15 @@ h2 {
 
 .avatar {
   background-color: #fff;
-  padding: 20px;
-  border-radius: 30%;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  padding: 10px;
+  border-radius: 20%; 
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   height: 120px;
-  width: 110px;
-  
+  width: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .container {
